WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63321
[WK2] fast/frames/iframe-plugin-load-remove-document-crash.html crashes
https://bugs.webkit.org/show_bug.cgi?id=63321
Summary
[WK2] fast/frames/iframe-plugin-load-remove-document-crash.html crashes
Csaba Osztrogonác
Reported
2011-06-24 07:13:08 PDT
stderr: Xlib: extension "RANDR" missing on display ":7.0".
Attachments
Patch
(1.45 KB, patch)
2011-06-27 05:34 PDT
,
Balazs Kelemen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2011-06-24 07:16:09 PDT
Skipped by
http://trac.webkit.org/changeset/89672
Balazs Kelemen
Comment 2
2011-06-27 05:31:24 PDT
Remove [Qt] since it seems to be a common bug that somehow only appears on Qt.
Balazs Kelemen
Comment 3
2011-06-27 05:34:47 PDT
Created
attachment 98706
[details]
Patch
Balazs Kelemen
Comment 4
2011-06-27 05:35:28 PDT
I am still trying to find out why it is only appearing on Qt.
Balazs Kelemen
Comment 5
2011-06-27 05:40:23 PDT
The null check is consistent with WebKit1: void PluginView::didFail(const ResourceError& error) { if (m_status != PluginStatusLoadedSuccessfully) return; ASSERT(m_loadManually); if (m_manualStream) <- !!! m_manualStream->didFail(0, error); }
Balazs Kelemen
Comment 6
2011-08-25 01:38:01 PDT
ping
Simon Hausmann
Comment 7
2011-11-28 00:19:18 PST
Comment on
attachment 98706
[details]
Patch r=me. I guess the test only fails in debug builds? (which is why we don't see it on the bots and this patch doesn't affect the skiplist?)
Simon Hausmann
Comment 8
2011-11-28 00:21:20 PST
(In reply to
comment #7
)
> (From update of
attachment 98706
[details]
) > r=me. I guess the test only fails in debug builds? (which is why we don't see it on the bots and this patch doesn't affect the skiplist?)
Ohh, it looks like Ossy skipped it in
http://trac.webkit.org/changeset/89672
. Please land this patch together with unskip.
Balazs Kelemen
Comment 9
2011-11-28 01:12:07 PST
Committed
r101232
: <
http://trac.webkit.org/changeset/101232
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug