Source/WebKit2: Reviewed by Simon Hausmann.

[WK2] fast/frames/iframe-plugin-load-remove-document-crash.html crashes
https://bugs.webkit.org/show_bug.cgi?id=63321

* WebProcess/Plugins/Netscape/NetscapePlugin.cpp:
(WebKit::NetscapePlugin::manualStreamDidFail): Don't assert that m_manualStream
is not null since it is not guaranteed but instead handle the case when it is null
with early return.

LayoutTests: [WK2] fast/frames/iframe-plugin-load-remove-document-crash.html crashes
https://bugs.webkit.org/show_bug.cgi?id=63321

Reviewed by Simon Hausmann.

Unskip the test.

* platform/qt-wk2/Skipped:

Canonical link: https://commits.webkit.org/89713@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101232 268f45cc-cd09-0410-ab3c-d52691b4dbfc